29.dec (ws)
      - default drummap can now be defined in instrument template file "instruments.xml"
        for every instrument; look for instrument "triangle"
      - edit drum map: complete implementation of shortcuts
28.dec (ws)
      - changed handling of drums
      - new PDF for English handbook
26.dec (ws)
      - allow tuplet entry with midi keyboard
      - Fix bug when changing time signature (4/4->3/4 + undo)
23.dec (ws)
      - fix printing of multi measure rests
	(olavgun)
      - lilypond export of longa and brevis, and of dynamic signs "sff"
	and "crescendo".
22.dec (ws)
      - update text elements after changing text style
        (does not work for lyrics for yet unknown reasons)
      (tb)
      - updating Dutch translation by Jaap Plaisier
20.dec (ws)
      - new measure property: break multi measure rest
      - first experimental implementation of "multi measure rests".
19.dec (ws)
      - fixed crash when undo delete bracket
      - right align system brackets
      - fixed crash when moving system brackets
      - renamed template files replacing "_" with " "
      (la)
	    - correct issue on full measure rest in musicXML export
	    - improve support of octave-shift in musicXML import
      (db)
      - changed gateTime numbers in template files to match new default
      - removed pageFormat tag from leadsheet, piano, and choir templates.
        New scores based on these templates now adopt the default page size set by the user
18.dec (tb)
      - updating Hindi translation from Balvihar Grindia
       (ws)
      - implement style value "bracket distance"
      - system brackets can now be moved to different column in edit mode with
        Shift+right and Shift+left
      - fix display of sharp/flat in a slash chord name
      - change chord name layout: align chord name to base line
      - fixed crash when pressing "+" in note entry mode and then adding note with mouse