@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>859</width>
-    <height>450</height>
+    <width>818</width>
+    <height>475</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -102,17 +102,9 @@
       </sizepolicy>
      </property>
      <property name="currentIndex" >
-      <number>0</number>
+      <number>3</number>
      </property>
      <widget class="QWidget" name="Seite_5" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>579</width>
-        <height>393</height>
-       </rect>
-      </property>
       <layout class="QVBoxLayout" name="verticalLayout_6" >
        <item>
         <widget class="QCheckBox" name="concertPitch" >
@@ -196,14 +188,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="page2" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>579</width>
-        <height>393</height>
-       </rect>
-      </property>
       <layout class="QGridLayout" >
        <item row="0" column="0" >
         <widget class="QLabel" name="label" >
@@ -637,14 +621,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="Seite_8" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>579</width>
-        <height>393</height>
-       </rect>
-      </property>
       <layout class="QVBoxLayout" name="verticalLayout_3" >
        <item>
         <widget class="QGroupBox" name="groupBox_2" >
@@ -694,14 +670,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="page3" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>579</width>
-        <height>393</height>
-       </rect>
-      </property>
       <layout class="QVBoxLayout" name="verticalLayout_4" >
        <item>
         <widget class="QGroupBox" name="groupBox_3" >
@@ -711,166 +679,219 @@
          <property name="flat" >
           <bool>true</bool>
          </property>
-         <layout class="QFormLayout" name="formLayout_2" >
+         <layout class="QGridLayout" name="gridLayout_2" >
           <item row="0" column="0" >
-           <widget class="QLabel" name="label_11" >
-            <property name="text" >
-             <string>spacing (1=tight)</string>
+           <layout class="QFormLayout" name="formLayout_2" >
+            <property name="fieldGrowthPolicy" >
+             <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
             </property>
-           </widget>
+            <item row="0" column="0" >
+             <widget class="QLabel" name="label_11" >
+              <property name="text" >
+               <string>spacing (1=tight)</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1" >
+             <widget class="QDoubleSpinBox" name="measureSpacing" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimum" >
+               <double>1.000000000000000</double>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0" >
+             <widget class="QLabel" name="label_12" >
+              <property name="text" >
+               <string>left margin</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="1" >
+             <widget class="QDoubleSpinBox" name="barNoteDistance" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="suffix" >
+               <string>sp</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="0" >
+             <widget class="QLabel" name="label_13" >
+              <property name="text" >
+               <string>min. right margin</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="1" >
+             <widget class="QDoubleSpinBox" name="noteBarDistance" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="suffix" >
+               <string>sp</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="0" >
+             <widget class="QLabel" name="label_14" >
+              <property name="text" >
+               <string>min note distance</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="1" >
+             <widget class="QDoubleSpinBox" name="minNoteDistance" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="suffix" >
+               <string>sp</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0" >
+             <widget class="QLabel" name="label_18" >
+              <property name="text" >
+               <string>clef left margin</string>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="1" >
+             <widget class="QDoubleSpinBox" name="clefLeftMargin" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="suffix" >
+               <string>sp</string>
+              </property>
+             </widget>
+            </item>
+            <item row="5" column="0" >
+             <widget class="QLabel" name="label_19" >
+              <property name="text" >
+               <string>keysig left margin</string>
+              </property>
+             </widget>
+            </item>
+            <item row="5" column="1" >
+             <widget class="QDoubleSpinBox" name="keysigLeftMargin" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="suffix" >
+               <string>sp</string>
+              </property>
+             </widget>
+            </item>
+            <item row="6" column="0" >
+             <widget class="QLabel" name="label_20" >
+              <property name="text" >
+               <string>timesig left margin</string>
+              </property>
+             </widget>
+            </item>
+            <item row="6" column="1" >
+             <widget class="QDoubleSpinBox" name="timesigLeftMargin" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="suffix" >
+               <string>sp</string>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="0" >
+             <widget class="QLabel" name="label_21" >
+              <property name="text" >
+               <string>clef/key right margin</string>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="1" >
+             <widget class="QDoubleSpinBox" name="clefKeyRightMargin" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="suffix" >
+               <string>sp</string>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="0" >
+             <widget class="QLabel" name="label_17" >
+              <property name="text" >
+               <string>begin repeat left margin</string>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="1" >
+             <widget class="QDoubleSpinBox" name="beginRepeatLeftMargin" >
+              <property name="sizePolicy" >
+               <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="suffix" >
+               <string>sp</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
           <item row="0" column="1" >
-           <widget class="QDoubleSpinBox" name="measureSpacing" >
-            <property name="sizePolicy" >
-             <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
+           <spacer name="horizontalSpacer" >
+            <property name="orientation" >
+             <enum>Qt::Horizontal</enum>
             </property>
-            <property name="minimum" >
-             <double>1.000000000000000</double>
+            <property name="sizeHint" stdset="0" >
+             <size>
+              <width>242</width>
+              <height>20</height>
+             </size>
             </property>
-           </widget>
+           </spacer>
           </item>
           <item row="1" column="0" >
-           <widget class="QLabel" name="label_12" >
-            <property name="text" >
-             <string>left margin</string>
+           <spacer name="verticalSpacer_4" >
+            <property name="orientation" >
+             <enum>Qt::Vertical</enum>
             </property>
-           </widget>
-          </item>
-          <item row="1" column="1" >
-           <widget class="QDoubleSpinBox" name="barNoteDistance" >
-            <property name="sizePolicy" >
-             <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
+            <property name="sizeHint" stdset="0" >
+             <size>
+              <width>20</width>
+              <height>34</height>
+             </size>
             </property>
-            <property name="suffix" >
-             <string>sp</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0" >
-           <widget class="QLabel" name="label_13" >
-            <property name="text" >
-             <string>min. right margin</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1" >
-           <widget class="QDoubleSpinBox" name="noteBarDistance" >
-            <property name="sizePolicy" >
-             <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="suffix" >
-             <string>sp</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0" >
-           <widget class="QLabel" name="label_14" >
-            <property name="text" >
-             <string>min note distance</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1" >
-           <widget class="QDoubleSpinBox" name="minNoteDistance" >
-            <property name="sizePolicy" >
-             <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="suffix" >
-             <string>sp</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="0" >
-           <widget class="QLabel" name="label_18" >
-            <property name="text" >
-             <string>clef left margin</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="1" >
-           <widget class="QDoubleSpinBox" name="clefLeftMargin" >
-            <property name="sizePolicy" >
-             <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="suffix" >
-             <string>sp</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="0" >
-           <widget class="QLabel" name="label_19" >
-            <property name="text" >
-             <string>keysig left margin</string>
-            </property>
-           </widget>
-          </item>
-          <item row="5" column="1" >
-           <widget class="QDoubleSpinBox" name="keysigLeftMargin" >
-            <property name="sizePolicy" >
-             <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="suffix" >
-             <string>sp</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="0" >
-           <widget class="QLabel" name="label_20" >
-            <property name="text" >
-             <string>timesig left margin</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="1" >
-           <widget class="QDoubleSpinBox" name="timesigLeftMargin" >
-            <property name="sizePolicy" >
-             <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="suffix" >
-             <string>sp</string>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="0" >
-           <widget class="QLabel" name="label_21" >
-            <property name="text" >
-             <string>clef/key right margin</string>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="1" >
-           <widget class="QDoubleSpinBox" name="clefKeyRightMargin" >
-            <property name="sizePolicy" >
-             <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="suffix" >
-             <string>sp</string>
-            </property>
-           </widget>
+           </spacer>
           </item>
          </layout>
         </widget>
@@ -878,14 +899,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="page1" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>100</width>
-        <height>30</height>
-       </rect>
-      </property>
       <layout class="QVBoxLayout" >
        <property name="spacing" >
         <number>6</number>
@@ -991,14 +1004,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="Seite" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>100</width>
-        <height>30</height>
-       </rect>
-      </property>
       <layout class="QGridLayout" >
        <item row="0" column="0" >
         <widget class="QLabel" name="label_26" >
@@ -1101,14 +1106,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="Seite_2" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>100</width>
-        <height>30</height>
-       </rect>
-      </property>
       <layout class="QGridLayout" name="gridLayout" >
        <item row="0" column="0" >
         <widget class="QLabel" name="label_38" >
@@ -1272,14 +1269,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="Seite_3" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>100</width>
-        <height>30</height>
-       </rect>
-      </property>
       <layout class="QGridLayout" >
        <item row="0" column="0" >
         <widget class="QLabel" name="label_8" >
@@ -1340,14 +1329,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="Seite_4" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>100</width>
-        <height>30</height>
-       </rect>
-      </property>
       <layout class="QGridLayout" >
        <item row="0" column="0" >
         <widget class="QCheckBox" name="useGermanNoteNames" >
@@ -1392,14 +1373,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="Seite_6" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>100</width>
-        <height>30</height>
-       </rect>
-      </property>
       <layout class="QGridLayout" name="gridLayout_3" >
        <item row="0" column="0" >
         <widget class="QLabel" name="label_35" >
@@ -1468,14 +1441,6 @@
       </layout>
      </widget>
      <widget class="QWidget" name="Seite_7" >
-      <property name="geometry" >
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>100</width>
-        <height>30</height>
-       </rect>
-      </property>
       <layout class="QVBoxLayout" name="verticalLayout" >
        <item>
         <widget class="QGroupBox" name="groupBox" >
