@@ -1,4 +1,5 @@
 29.dec (ws)
+      - new style parameter: begin repeat barline left margin
       - default drummap can now be defined in instrument template file "instruments.xml"
         for every instrument; look for instrument "triangle"
       - edit drum map: complete implementation of shortcuts
